# backstage

./: .dockerignore  .env.example  .gitignore  app-config.production.yaml  app-config.yaml  catalog-info.yaml  docker-compose.yaml  mkdocs.yml
asela-portal/: app-config.yaml  catalog-info.yaml
examples/templates/crewai-agent/content-agent/: .env.example  .gitignore  README.md  deploy-to-ecr.sh  docker-compose.yml  pyproject.toml  requirements.txt
examples/templates/crewai-agent/content-agent/config/knowledge/: README.md
examples/templates/crewai-agent/content-agent/docker/: Dockerfile.${{ values.subAgentName }}  Dockerfile.${{ values.subAgentPythonName }}
examples/templates/crewai-agent/content-agent/src/: __init__.py
examples/templates/crewai-agent/content-agent/src/${{ values.subAgentName }}/: agent.py  executor.py  server.py  tools.py
examples/templates/crewai-agent/content-agent/src/${{ values.subAgentPythonName }}/: __init__.py  agent.py  executor.py  prompts.py  server.py  tools.py
examples/templates/crewai-agent/content-agent/src/${{ values.subAgentPythonName }}/config/: agents.yaml
examples/templates/crewai-agent/content-agent/src/orchestrator/: __init__.py  agents.py  auth.py  copilotkit_endpoint.py  flow.py  main.py  prompts.py  session_manager.py  user_manager.py
examples/templates/crewai-agent/content-agent/src/shared/: __init__.py  a2a_utils.py  config.py  knowledge.py  logging_config.py  models.py  observability.py
examples/templates/crewai-agent/content-agent/tests/: __init__.py  conftest.py  test_orchestrator.py  test_sub_agent.py
(+109 files in other folders)
